; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/staging/winbond/extr_mlmetxrx.c_MLME_SendComplete.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/staging/winbond/extr_mlmetxrx.c_MLME_SendComplete.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.wbsoft_priv = type { %struct.TYPE_3__ }
%struct.TYPE_3__ = type { i32, i32, i64 }
%struct.TYPE_4__ = type { i32 }

@MLME_SUCCESS = common dso_local global i32 0, align 4
@PACKET_FREE_TO_USE = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @MLME_SendComplete(%struct.wbsoft_priv* %0, i32 %1, i8 zeroext %2) #0 {
  %4 = alloca %struct.wbsoft_priv*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i8, align 1
  %7 = alloca %struct.TYPE_4__, align 4
  store %struct.wbsoft_priv* %0, %struct.wbsoft_priv** %4, align 8
  store i32 %1, i32* %5, align 4
  store i8 %2, i8* %6, align 1
  %8 = load %struct.wbsoft_priv*, %struct.wbsoft_priv** %4, align 8
  %9 = getelementptr inbounds %struct.wbsoft_priv, %struct.wbsoft_priv* %8, i32 0, i32 0
  %10 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %9, i32 0, i32 2
  store i64 0, i64* %10, align 8
  %11 = load %struct.wbsoft_priv*, %struct.wbsoft_priv** %4, align 8
  %12 = load %struct.wbsoft_priv*, %struct.wbsoft_priv** %4, align 8
  %13 = getelementptr inbounds %struct.wbsoft_priv, %struct.wbsoft_priv* %12, i32 0, i32 0
  %14 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %13, i32 0, i32 1
  %15 = load i32, i32* %14, align 4
  %16 = call i32 @MLMEfreeMMPDUBuffer(%struct.wbsoft_priv* %11, i32 %15)
  %17 = load i32, i32* @MLME_SUCCESS, align 4
  %18 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %7, i32 0, i32 0
  store i32 %17, i32* %18, align 4
  %19 = load i32, i32* @PACKET_FREE_TO_USE, align 4
  %20 = load %struct.wbsoft_priv*, %struct.wbsoft_priv** %4, align 8
  %21 = getelementptr inbounds %struct.wbsoft_priv, %struct.wbsoft_priv* %20, i32 0, i32 0
  %22 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %21, i32 0, i32 0
  store i32 %19, i32* %22, align 8
  ret void
}

declare dso_local i32 @MLMEfreeMMPDUBuffer(%struct.wbsoft_priv*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
